--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
