--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
+    "firebase": "^10.5.0",
     "jquery": "^3.7.1",
+    "sweetalert": "^2.1.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
